--- a/index.css
+++ b/index.css
@@ -14,4 +14,12 @@
   body {
  overflow: hidden;
  }
+
+.iFrame_content {
+            width: 100vw;
+            width: calc(var(--vw, 1vw) * 100);
+            height: 100vh;
+            height: calc(var(--vh, 1vh) * 100);
+            
+        }
 </style>
